inf = 1e4 to prevent nans

--- a/check.ipynb
+++ b/check.ipynb
@@ -6,45 +6,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch \n",
-    "from train import trainAR\n",
     "from models import *\n",
-    "from matplotlib import pyplot as plt\n",
-    "import build\n",
-    "from tqdm.notebook import tqdm\n",
-    "import pytorch_lightning as pl\n",
-    "import torch.nn.functional as F"
+    "from qhoptim.pyt import QHAdam\n",
+    "import pytorch_lightning as pl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "1\n"
      ]
     }
    ],
    "source": [
     "import build\n",
-    "loader = build.dataloader(data='dataset_v6', sample_length=4096, part=0.1, batch_size=10, shuffle=True)\n",
+    "loader = build.dataloader(data='dataset_v6', sample_length=4096, part=0.001, batch_size=1, shuffle=True)\n",
     "print(len(loader))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([10, 256, 4096]) torch.Size([10])\n"
+      "torch.Size([1, 256, 4096]) torch.Size([1])\n"
      ]
     }
    ],
@@ -55,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,104 +67,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "premodel = WaveNet(layers=10, blocks=4, residual_channels=16, skip_channels=16, end_channels=64, classes=256)"
+    "from models import *\n",
+    "from qhoptim.pyt import QHAdam\n",
+    "import pytorch_lightning as pl\n",
+    "\n",
+    "import build\n",
+    "loader = build.dataloader(data='dataset_v6', sample_length=2**13, part=0.001, batch_size=1, shuffle=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "premodel = MixtureNet(layers=3, blocks=3, res_channels=32, end_channels=32, classes=256, groups=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def NLL(y_hat, y):\n",
+    "    assert y_hat.shape == y.shape\n",
+    "    assert y_hat.dim() == 3 # (batch, channels, length)\n",
+    "    return -(y * torch.log(y_hat) + (1 - y) * torch.log(1 - y_hat)).sum(dim=1).mean()\n",
+    "\n",
     "class DaNet(pl.LightningModule):\n",
-    "    def __init__(self, model_loader, noise=0.0, lr=0):\n",
+    "    def __init__(self, model_loader, noise=0.0, lr=0.0):\n",
     "        super().__init__()\n",
     "        self.save_hyperparameters()\n",
     "        self.model = eval(model_loader)\n",
     "        self.lr = lr\n",
+    "        self.output_size = 2**12\n",
     "    \n",
     "    def forward(self, x):\n",
     "        return self.model(x)\n",
     "    \n",
     "    def training_step(self, batch, batch_idx):\n",
     "        x, aux = batch\n",
-    "        x += torch.randn_like(x) * self.hparams.noise\n",
-    "        x_hat = self.forward(x)\n",
-    "        loss = F.cross_entropy(x_hat, x)\n",
+    "        inp = F.pad(x, (1, -1)) + torch.randn_like(x) * self.hparams.noise\n",
+    "        x_hat = self.forward(inp)\n",
+    "        loss = NLL(x_hat[-self.output_size:], x[-self.output_size:])\n",
     "        self.log(\"train_loss\", loss)\n",
     "        return loss\n",
     "    \n",
     "    def configure_optimizers(self):\n",
-    "        optimizer = torch.optim.Adam(self.parameters(), lr=self.lr)\n",
-    "        return optimizer"
+    "        optimizer = QHAdam(self.parameters(), lr=self.lr, nus=(0.7, 1.0))\n",
+    "        return {\"optimizer\": optimizer, \"lr_scheduler\": torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.5**0.001)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\loops\\utilities.py:91: PossibleUserWarning: `max_epochs` was not set. Setting it to 1000 epochs. To train without an epoch limit, set `max_epochs=-1`.\n",
-      "  rank_zero_warn(\n",
-      "GPU available: False, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "Missing logger folder: c:\\home\\ml\\MusicBox\\lightning_logs\n",
-      "\n",
-      "  | Name  | Type    | Params\n",
-      "----------------------------------\n",
-      "0 | model | WaveNet | 85.8 K\n",
-      "----------------------------------\n",
-      "85.8 K    Trainable params\n",
-      "0         Non-trainable params\n",
-      "85.8 K    Total params\n",
-      "0.343     Total estimated model params size (MB)\n",
-      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\trainer\\connectors\\data_connector.py:240: PossibleUserWarning: The dataloader, train_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 12 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
-      "  rank_zero_warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 181:  90%|█████████ | 9/10 [00:20<00:02,  2.33s/it, loss=3.78, v_num=0] "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\trainer\\trainer.py:726: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
-      "  rank_zero_warn(\"Detected KeyboardInterrupt, attempting graceful shutdown...\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model = DaNet(module_description(premodel), noise=0.0, lr=0.001)\n",
-    "trainer = pl.Trainer(log_every_n_steps=5)\n",
-    "trainer.fit(model, train_dataloaders=loader)"
+    "model = DaNet(module_description(premodel), noise=0.0, lr=1e-9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\loops\\utilities.py:91: PossibleUserWarning: `max_epochs` was not set. Setting it to 1000 epochs. To train without an epoch limit, set `max_epochs=-1`.\n",
-      "  rank_zero_warn(\n",
       "GPU available: False, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
@@ -177,37 +148,59 @@
       "\n",
       "  | Name  | Type       | Params\n",
       "-------------------------------------\n",
-      "0 | model | Sequential | 197 K \n",
+      "0 | model | MixtureNet | 11.8 K\n",
       "-------------------------------------\n",
-      "197 K     Trainable params\n",
+      "11.8 K    Trainable params\n",
       "0         Non-trainable params\n",
-      "197 K     Total params\n",
-      "0.789     Total estimated model params size (MB)\n",
-      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\trainer\\connectors\\data_connector.py:240: PossibleUserWarning: The dataloader, train_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 12 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
-      "  rank_zero_warn(\n"
+      "11.8 K    Total params\n",
+      "0.047     Total estimated model params size (MB)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 4:  40%|████      | 4/10 [00:03<00:04,  1.21it/s, loss=4.16, v_num=4] "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\trainer\\trainer.py:726: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
-      "  rank_zero_warn(\"Detected KeyboardInterrupt, attempting graceful shutdown...\")\n"
+      "Epoch 10:   0%|          | 0/1 [00:00<?, ?it/s, loss=0.029, v_num=11]        "
      ]
     }
    ],
    "source": [
-    "model.lr = 1e-3\n",
-    "model.configure_optimizers()\n",
-    "trainer = pl.Trainer(log_every_n_steps=5)\n",
+    "trainer = pl.Trainer(log_every_n_steps=1)\n",
     "trainer.fit(model, train_dataloaders=loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.0039, grad_fn=<MeanBackward0>) tensor(0.0238, grad_fn=<StdBackward0>)\n",
+      "tensor(0.0290, grad_fn=<NegBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.randn((10, 256, 2**13))\n",
+    "y = model(x)\n",
+    "print(y.mean(), y.std())\n",
+    "t = y[0, :, -1].view(1, -1, 1)\n",
+    "# print(t)\n",
+    "d = F.one_hot(torch.tensor(36), 256).view(1, -1, 1)\n",
+    "print(NLL(t, d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for p in model.parameters():\n",
+    "    print(p)"
    ]
   }
  ],
