--- a/check.ipynb
+++ b/check.ipynb
@@ -125,22 +125,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = DaNet(module_description(premodel), noise=0.0, lr=1e-9)"
+    "model = DaNet(module_description(premodel), noise=0.0, lr=1e-3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(-21032.4688, grad_fn=<SumBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.randn((10, 256, 2 ** 13))\n",
+    "y = model(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\loops\\utilities.py:91: PossibleUserWarning: `max_epochs` was not set. Setting it to 1000 epochs. To train without an epoch limit, set `max_epochs=-1`.\n",
+      "  rank_zero_warn(\n",
       "GPU available: False, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
@@ -153,44 +173,64 @@
       "11.8 K    Trainable params\n",
       "0         Non-trainable params\n",
       "11.8 K    Total params\n",
-      "0.047     Total estimated model params size (MB)\n"
+      "0.047     Total estimated model params size (MB)\n",
+      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\trainer\\connectors\\data_connector.py:240: PossibleUserWarning: The dataloader, train_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 12 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  rank_zero_warn(\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 10:   0%|          | 0/1 [00:00<?, ?it/s, loss=0.029, v_num=11]        "
+      "Epoch 0:   0%|          | 0/1 [00:00<?, ?it/s] tensor(-2214.6467, grad_fn=<SumBackward0>)\n",
+      "Epoch 1:   0%|          | 0/1 [00:00<?, ?it/s, loss=nan, v_num=18]        "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\qhoptim\\pyt\\qhadam.py:133: UserWarning: This overload of add_ is deprecated:\n",
+      "\tadd_(Number alpha, Tensor other)\n",
+      "Consider using one of the following signatures instead:\n",
+      "\tadd_(Tensor other, *, Number alpha) (Triggered internally at  C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\python_arg_parser.cpp:1055.)\n",
+      "  exp_avg.mul_(beta1_adj).add_(1.0 - beta1_adj, d_p)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(nan, grad_fn=<SumBackward0>)\n",
+      "Epoch 2:   0%|          | 0/1 [00:00<?, ?it/s, loss=nan, v_num=18]        tensor(nan, grad_fn=<SumBackward0>)\n",
+      "Epoch 3:   0%|          | 0/1 [00:00<?, ?it/s, loss=nan, v_num=18]        tensor(nan, grad_fn=<SumBackward0>)\n",
+      "Epoch 4:   0%|          | 0/1 [00:00<?, ?it/s, loss=nan, v_num=18]        tensor(nan, grad_fn=<SumBackward0>)\n",
+      "Epoch 5:   0%|          | 0/1 [00:00<?, ?it/s, loss=nan, v_num=18]        tensor(nan, grad_fn=<SumBackward0>)\n",
+      "Epoch 6:   0%|          | 0/1 [00:00<?, ?it/s, loss=nan, v_num=18]        tensor(nan, grad_fn=<SumBackward0>)\n",
+      "Epoch 7:   0%|          | 0/1 [00:00<?, ?it/s, loss=nan, v_num=18]        tensor(nan, grad_fn=<SumBackward0>)\n",
+      "Epoch 8:   0%|          | 0/1 [00:00<?, ?it/s, loss=nan, v_num=18]        tensor(nan, grad_fn=<SumBackward0>)\n",
+      "Epoch 9:   0%|          | 0/1 [00:00<?, ?it/s, loss=nan, v_num=18]        tensor(nan, grad_fn=<SumBackward0>)\n",
+      "Epoch 10:   0%|          | 0/1 [00:00<?, ?it/s, loss=nan, v_num=18]       tensor(nan, grad_fn=<SumBackward0>)\n",
+      "Epoch 11:   0%|          | 0/1 [00:00<?, ?it/s, loss=nan, v_num=18]        tensor(nan, grad_fn=<SumBackward0>)\n",
+      "Epoch 12:   0%|          | 0/1 [00:00<?, ?it/s, loss=nan, v_num=18]        tensor(nan, grad_fn=<SumBackward0>)\n",
+      "Epoch 13:   0%|          | 0/1 [00:00<?, ?it/s, loss=nan, v_num=18]        tensor(nan, grad_fn=<SumBackward0>)\n",
+      "Epoch 14:   0%|          | 0/1 [00:00<?, ?it/s, loss=nan, v_num=18]        tensor(nan, grad_fn=<SumBackward0>)\n",
+      "Epoch 15:   0%|          | 0/1 [00:00<?, ?it/s, loss=nan, v_num=18]        tensor(nan, grad_fn=<SumBackward0>)\n",
+      "Epoch 16:   0%|          | 0/1 [00:00<?, ?it/s, loss=nan, v_num=18]        "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\msh24\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pytorch_lightning\\trainer\\trainer.py:726: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
+      "  rank_zero_warn(\"Detected KeyboardInterrupt, attempting graceful shutdown...\")\n"
      ]
     }
    ],
    "source": [
     "trainer = pl.Trainer(log_every_n_steps=1)\n",
     "trainer.fit(model, train_dataloaders=loader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(0.0039, grad_fn=<MeanBackward0>) tensor(0.0238, grad_fn=<StdBackward0>)\n",
-      "tensor(0.0290, grad_fn=<NegBackward0>)\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = torch.randn((10, 256, 2**13))\n",
-    "y = model(x)\n",
-    "print(y.mean(), y.std())\n",
-    "t = y[0, :, -1].view(1, -1, 1)\n",
-    "# print(t)\n",
-    "d = F.one_hot(torch.tensor(36), 256).view(1, -1, 1)\n",
-    "print(NLL(t, d))"
    ]
   },
   {
